# drive-by-wire

./: Complete-Redesign.md  New-CAN-Design.md  README.md  _MCU-SC18IS606-MCP2515-TJA1055_PinMapping.md
.github/workflows/: rust.yml
code/: .gitignore  Cargo.toml  DEVELOP.md  Embed.toml  README.md  build.rs  rust-toolchain.toml
code/.cargo/: config.toml
code/src/: config.rs  drive-by-wire.rs  lib_actuator.rs  lib_buttons.rs  lib_can_bus.rs  lib_config.rs  lib_core1.rs  lib_resources.rs  lib_ups.rs  lib_watchdog.rs  main.rs  move-actuator_backward.rs  move-actuator_forward.rs  prepare-flash.rs  read-actuator-pot.rs  read-config.rs  read_config.rs  set-fingerprint.rs  set-password.rs  set-security-level.rs  set-valet-mode.rs  test-actuator.rs  unset-valet-mode.rs
