[package]
name = "drive-by-wire"
version = "0.3.10"
description = "Provide Drive-by-Wire buttons for the Mercedes-Benz SLK55 AMG 2010 (R171)"
readme = "README.md"
edition = "2021"
license = "GPL v3"
authors = ["Turbo Fredriksson <turbo@bayour.com>"]
repository = "https://github.com/FransUrbo/drive-by-wire"
homepage = "https://github.com/FransUrbo/drive-by-wire"
categories = [
    "embedded",
    "no-std",
    "concurrency",
    "asynchronous",
]

# =====

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
static_cell = "2.1.0"

[dependencies.defmt-serial]
# The released one (v1.0.1) is missing features for new Embassy.
git = "https://github.com/gauteh/defmt-serial"
rev = "411ae7fa909b4fd2667885aff687e009b9108190"

[dependencies.ws2812]
git = "https://github.com/FransUrbo/rust-libs-ws2812.git"
version = "1.0.0"

[dependencies.r503]
git = "https://github.com/FransUrbo/rust-libs-r503.git"
version = "1.0.0"

[dependencies.debounce] # Duplicate lib name!
git = "https://github.com/FransUrbo/rust-libs-debounce.git"
version = "0.1.3"

[dependencies.actuator]
git = "https://github.com/FransUrbo/rust-libs-actuator.git"
rev = "42b5496"

[dependencies.embassy-executor]
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-rp]
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

[dependencies.embassy-sync]
features = ["defmt"]
git = "https://github.com/embassy-rs/embassy.git"
rev = "ef01e2e"

# =====
# https://doc.rust-lang.org/cargo/reference/profiles.html

# ----- Root profiles.

# => `target/thumbv6m-none-eabi/debug/drive-by-wire`
[profile.dev]
codegen-units = 1
debug = "full"
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# Same as `release` but leave the debug and info etc macros intact.
# Results in a slightly larger binary.
# => `target/thumbv6m-none-eabi/release-dev/drive-by-wire`
[profile.release-dev]
inherits = "release"
strip = "debuginfo"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

# =====

[[bin]]
name = "drive-by-wire"
path = "src/drive-by-wire.rs"

[[bin]]
name = "prepare-flash"
path = "src/prepare-flash.rs"

[[bin]]
name = "read_config"
path = "src/read_config.rs"

[[bin]]
name = "set-valet-mode"
path = "src/set-valet-mode.rs"

[[bin]]
name = "unset-valet-mode"
path = "src/unset-valet-mode.rs"

[[bin]]
name = "set-password"
path = "src/set-password.rs"

[[bin]]
name = "set-fingerprint"
path = "src/set-fingerprint.rs"

[[bin]]
name = "read-actuator-pot"
path = "src/read-actuator-pot.rs"

[[bin]]
name = "move-actuator_forward"
path = "src/move-actuator_forward.rs"

[[bin]]
name = "move-actuator_backward"
path = "src/move-actuator_backward.rs"

[[bin]]
name = "test-actuator"
path = "src/test-actuator.rs"

[[bin]]
name = "set-security-level"
path = "src/set-security-level.rs"
